--- a/main.css
+++ b/main.css
@@ -64,26 +64,6 @@ h4 {
   letter-spacing: 1.2px;
 }
 
-#footer_right {
-  width: 200px;
-  text-align: right;
-  float: right;
-}
-
-#footer_left {
-  width: 200px;
-  text-align: left;
-  float: left;
-}
-
-#footer_left img {
-  margin: 3px;
-}
-
-#footer_left img:hover {
-  opacity: 0.6;
-}
-
 .nav_bar {
   color: rgba(102,102,102,1);
   text-transform: uppercase;
@@ -138,33 +118,6 @@ hr {
   color: hsl(46, 89%, 65%);
 }
 
-.nav_bar li.dropdown {
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: rgba(102,102,102,1);
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
 .line {
   width:100%;
   border-bottom: 1px solid black;
@@ -175,28 +128,6 @@ hr {
   margin-right: 18%;
   display: inline-block;
   color: rgba(102,102,102,1);
-}
-
-.left_photo img {
-  text-align: left;
-  float: left;
-  margin-right: 2em;
-}
-
-.right_photo img {
-  text-align: right;
-  float: right;
-  margin-left: 2em;
-
-}
-
-.left_text {
-  text-align: left;
-}
-
-.right_text {
-  text-align: left;
-  margin-left: 70%;
 }
 
 .container {
@@ -521,7 +452,8 @@ hr {
 
 .box {
   display: block;
-  margin: 5px;
+  margin-left: 5px;
+  margin-right: 5px; 
 }
 
 @media screen and (min-width: 600px) {
@@ -540,7 +472,7 @@ hr {
 
 @media screen and (min-width: 1000px) {
   .cell {
-    width: calc(100% / 4.5);
+    width: calc(100% / 4.8);
   }
 }
 
